feat: part4+. ch3 Compose 실무 활용 // 영화 정보 앱 // DialogPopup 마무리

--- a/part4/chatper5/MovieApp/app/src/main/res/values/strings.xml
+++ b/part4/chatper5/MovieApp/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">MovieApp</string>
+    <string name="btn_close">CLOSE</string>
+    <string name="btn_open">OPEN</string>
+    <string name="btn_cancel">CANCEL</string>
+    <string name="btn_submit">SUBMIT</string>
+    <string name="title_dialog_popup_rating">Rate your score!</string>
+    <string name="description_btn_send">Send Button</string>
 </resources>
