feat: part4+. ch3 Compose 실무 활용 // 영화 정보 앱 // 피드 화면 생성 (FeedScreen)

--- a/part4/chatper5/MovieApp/app/src/main/res/values/strings.xml
+++ b/part4/chatper5/MovieApp/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="btn_submit">SUBMIT</string>
     <string name="title_dialog_popup_rating">Rate your score!</string>
     <string name="description_btn_send">Send Button</string>
+    <string name="retry">RETRY</string>
 </resources>
